// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component tests creates and checks snapshot of Header html 1`] = `
<table
  align="center"
  className="container"
>
  <tbody>
    <tr>
      <td>
        <table
          align="center"
          className="row spacer"
        >
          <tbody>
            <tr>
              <th
                className="large-12 small-12 columns first last"
              >
                <table>
                  <tbody>
                    <tr>
                      <th>
                        <table
                          className="spacer"
                        >
                          <tbody>
                            <tr>
                              <td
                                height="16px"
                                style={
                                  Object {
                                    "fontSize": "16px",
                                    "lineHeight": "16px",
                                  }
                                }
                              >
                                 
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </th>
                    </tr>
                  </tbody>
                </table>
              </th>
            </tr>
          </tbody>
        </table>
        <table
          align="center"
          className="row"
        >
          <tbody>
            <tr>
              <th
                align="center"
                className="small-12 large-12 columns first last float-center"
              >
                <table>
                  <tbody>
                    <tr>
                      <th>
                        <table
                          className="spacer"
                        >
                          <tbody>
                            <tr>
                              <td
                                height="16px"
                                style={
                                  Object {
                                    "fontSize": "16px",
                                    "lineHeight": "16px",
                                  }
                                }
                              >
                                 
                              </td>
                            </tr>
                          </tbody>
                        </table>
                        <center>
                          <img
                            alt="logo"
                            height={47}
                            src="https://assets.prolaera.com/prolaeraLogo_fullText.png"
                            style={
                              Object {
                                "border": "none",
                                "display": "block",
                                "outline": "none",
                                "textDecoration": "none",
                              }
                            }
                            width={200}
                          />
                        </center>
                      </th>
                    </tr>
                  </tbody>
                </table>
              </th>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`buildHeader image resizing tests resizes image successfully KRS logo 1`] = `
<table
  align="center"
  border="0"
  cellPadding={0}
  cellSpacing={0}
  className="emailHeader"
  style={
    Object {
      "backgroundColor": "#F7F7F7",
    }
  }
  valign="top"
  width="100%"
>
  <tbody>
    <tr>
      <td
        align="center"
      >
        <table
          align="center"
          cellSpacing={0}
          style={
            Object {
              "maxWidth": "584px",
              "padding": "15px",
            }
          }
        >
          <tr
            align="left"
          >
            <td
              width="292px"
            >
              <img
                alt="logo"
                height={47}
                src="http://assets.prolaera.com/KRS-lg.png"
                style={
                  Object {
                    "border": "none",
                    "display": "block",
                    "outline": "none",
                    "textDecoration": "none",
                  }
                }
                width={209.45470692717583}
              />
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
              width="252px"
            >
              <div>
                <div />
                 
              </div>
              <div>
                <div />
                 
              </div>
              <div>
                <a
                  href="https://app.prolaera.com"
                >
                  prolaera.com
                </a>
                 
              </div>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`buildHeader image resizing tests resizes image successfully NHHco Logo 1`] = `
<table
  align="center"
  border="0"
  cellPadding={0}
  cellSpacing={0}
  className="emailHeader"
  style={
    Object {
      "backgroundColor": "#F7F7F7",
    }
  }
  valign="top"
  width="100%"
>
  <tbody>
    <tr>
      <td
        align="center"
      >
        <table
          align="center"
          cellSpacing={0}
          style={
            Object {
              "maxWidth": "584px",
              "padding": "15px",
            }
          }
        >
          <tr
            align="left"
          >
            <td
              width="292px"
            >
              <img
                alt="logo"
                height={47}
                src="http://assets.prolaera.com/NHHCo-lg.png"
                style={
                  Object {
                    "border": "none",
                    "display": "block",
                    "outline": "none",
                    "textDecoration": "none",
                  }
                }
                width={113.92391304347827}
              />
            </td>
            <td
              style={
                Object {
                  "textAlign": "center",
                }
              }
              width="252px"
            >
              <div>
                <div />
                 
              </div>
              <div>
                <div />
                 
              </div>
              <div>
                <a
                  href="https://app.prolaera.com"
                >
                  prolaera.com
                </a>
                 
              </div>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`buildHeader image resizing tests resizes image successfully a-lign logo 1`] = `
<table
  align="center"
  className="container"
>
  <tbody>
    <tr>
      <td>
        <table
          align="center"
          className="row spacer"
        >
          <tbody>
            <tr>
              <th
                className="large-12 small-12 columns first last"
              >
                <table>
                  <tbody>
                    <tr>
                      <th>
                        <table
                          className="spacer"
                        >
                          <tbody>
                            <tr>
                              <td
                                height="16px"
                                style={
                                  Object {
                                    "fontSize": "16px",
                                    "lineHeight": "16px",
                                  }
                                }
                              >
                                 
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </th>
                    </tr>
                  </tbody>
                </table>
              </th>
            </tr>
          </tbody>
        </table>
        <table
          align="center"
          className="row"
        >
          <tbody>
            <tr>
              <th
                align="center"
                className="small-12 large-12 columns first last float-center"
              >
                <table>
                  <tbody>
                    <tr>
                      <th>
                        <table
                          className="spacer"
                        >
                          <tbody>
                            <tr>
                              <td
                                height="16px"
                                style={
                                  Object {
                                    "fontSize": "16px",
                                    "lineHeight": "16px",
                                  }
                                }
                              >
                                 
                              </td>
                            </tr>
                          </tbody>
                        </table>
                        <center>
                          <img
                            alt="logo"
                            height={47}
                            src="https://prolaera.s3-us-west-2.amazonaws.com/sponsors/def4c2bf-0485-4eda-9b2b-0e4055ef0dbe.logo.png"
                            style={
                              Object {
                                "border": "none",
                                "display": "block",
                                "outline": "none",
                                "textDecoration": "none",
                              }
                            }
                            width={199.08130081300814}
                          />
                        </center>
                      </th>
                    </tr>
                  </tbody>
                </table>
              </th>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tbody>
</table>
`;
